--- a/bank-automat/customwithdrawal.ui
+++ b/bank-automat/customwithdrawal.ui
@@ -59,12 +59,18 @@
            <property name="text">
             <string>7</string>
            </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="2" column="1">
           <widget class="QPushButton" name="btn8">
            <property name="text">
             <string>8</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -73,12 +79,18 @@
            <property name="text">
             <string>9</string>
            </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="1" column="2">
           <widget class="QPushButton" name="btn6">
            <property name="text">
             <string>6</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -87,12 +99,18 @@
            <property name="text">
             <string>3</string>
            </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="1" column="0">
           <widget class="QPushButton" name="btn4">
            <property name="text">
             <string>4</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -101,12 +119,18 @@
            <property name="text">
             <string>5</string>
            </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="0" column="0">
           <widget class="QPushButton" name="btn1">
            <property name="text">
             <string>1</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -115,12 +139,18 @@
            <property name="text">
             <string>2</string>
            </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="3" column="0">
           <widget class="QPushButton" name="btnBackspace">
            <property name="text">
             <string>Backspace</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -129,12 +159,18 @@
            <property name="text">
             <string>0</string>
            </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="3" column="2">
           <widget class="QPushButton" name="btnEnter">
            <property name="text">
             <string>Enter</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
