--- a/bank-automat/withdrawal.ui
+++ b/bank-automat/withdrawal.ui
@@ -55,12 +55,18 @@
            <property name="text">
             <string>80€</string>
            </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="0" column="0">
           <widget class="QPushButton" name="btn20">
            <property name="text">
             <string>20€</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -69,12 +75,18 @@
            <property name="text">
             <string>50€</string>
            </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="QPushButton" name="btn40">
            <property name="text">
             <string>40€</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -83,12 +95,18 @@
            <property name="text">
             <string>Other</string>
            </property>
+           <property name="autoDefault">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="2" column="0">
           <widget class="QPushButton" name="btn100">
            <property name="text">
             <string>100€</string>
+           </property>
+           <property name="autoDefault">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
