--- a/bank-automat/mainwindow.ui
+++ b/bank-automat/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>CashMate</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -37,7 +37,7 @@
      <x>0</x>
      <y>0</y>
      <width>310</width>
-     <height>36</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
