--- a/bank-automat/customwithdrawal.ui
+++ b/bank-automat/customwithdrawal.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>471</width>
-    <height>360</height>
+    <width>540</width>
+    <height>440</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Custom Withdrawal</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
@@ -50,7 +50,17 @@
         </spacer>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineEditAmount"/>
+        <widget class="QLineEdit" name="lineEditAmount">
+         <property name="acceptDrops">
+          <bool>false</bool>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout">
