--- a/bank-automat/styles/myStyle.qss
+++ b/bank-automat/styles/myStyle.qss
@@ -31,7 +31,24 @@ QLineEdit {
 }
 
 QTableView {
-    font: bold 12px;
+    font: bold 16px;
     gridline-color: black;
     border: 2px;
+}
+
+QMessageBox QLabel{
+    width: 300px;
+    height: 60px;
+    font: bold 16px
+}
+
+QMessageBox QPushButton {
+    background-color: orange;
+    border-style: outset;
+    border-width: 2px;
+    border-color: black;
+    min-height: 30px;
+    min-width: 70px;
+    border-radius: 6px;
+    font-size: 12px;
 }
