--- a/bank-automat/withdrawal.ui
+++ b/bank-automat/withdrawal.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>472</width>
-    <height>370</height>
+    <width>540</width>
+    <height>440</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Withdrawal</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
